tests/ui/attributes/export-visibility-with-unrecognized-arg.stderr
error: invalid export visibility value
  --> $DIR/export-visibility-with-unrecognized-arg.rs:4:23
   |
LL | #[export_visibility = "unrecognized spec"]
   |                       ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

